# controllers/auth.go
@@ -14,8 +14,6 @@ type RegisterRequest struct {
 	Name     string `json:"name" validate:"required"`
 	Email    string `json:"email" validate:"required"`
 	Password string `json:"password" validate:"required"`
-	// ConfirmPassword string `json:"confirm_password" validate:"required,eqfield=Password"`
-	// Role            int    `json:"role" validate:"required"`
 }
 
 // @Title 客服注册
@@ -41,7 +39,6 @@ func (c *AuthController) Register() {
 type ChangePasswordRequest struct {
 	Email    string `json:"email" validate:"omitempty,email"`
 	Password string `json:"password" validate:"required"`
-	// ConfirmPassword string `json:"confirm_password" validate:"required,eqfield=Password"`
 }
 
 // ChangePassword 修改密码
