# swagger/swagger.yml
@@ -92,6 +92,14 @@ paths:
         description: 域
         type: string
       - in: query
+        name: email
+        description: 邮箱
+        type: string
+      - in: query
+        name: name
+        description: 姓名
+        type: string
+      - in: query
         name: random
         description: 固定随机字符串，用以标识当前会话的唯一性
         type: string
@@ -146,8 +154,6 @@ definitions:
     title: ChangePasswordRequest
     type: object
     properties:
-      confirm_password:
-        type: string
       email:
         type: string
       password:
@@ -164,8 +170,6 @@ definitions:
     title: RegisterRequest
     type: object
     properties:
-      confirm_password:
-        type: string
       email:
         type: string
       name:
